# MariHA

./: .gitignore  .readthedocs.yaml  Dockerfile  FAQ.md  README.md  pyproject.toml  setup.sh  setup_cc.sh  setup_hpc.sh
docs/: adding_a_cl_method.md  adding_an_agent.md  adding_an_algorithm.md  architecture.rst  cl_methods.rst  conf.py  curriculum.rst  environment.rst  evaluation.rst  getting_started.rst  glossary.rst  index.rst  requirements.txt  training.rst  visualization.rst
docs/api/: curriculum.rst  environment.rst  eval.rst  index.rst  methods.rst  replay.rst  rl.rst
mariha/benchmark/: __init__.py  agent.py  cl_registry.py  config.py  registry.py
mariha/curriculum/: episode.py  loader.py  sequences.py
mariha/env/: base.py  continual.py  scenario_gen.py  scene.py
mariha/eval/: __init__.py  metrics.py  runner.py
mariha/methods/: __init__.py  agem.py  base.py  clonex.py  der.py  distillation_base.py  ewc.py  l2.py  mas.py  multitask.py  owl.py  packnet.py  regularization.py  regularizer_base.py  si.py  vcl.py
mariha/replay/: buffers.py  tree.py
mariha/rl/: __init__.py  dqn.py  models.py  ppo.py  (+1 more)
scripts/: architecture_specs.py  bk2_worker.sbatch  evaluate.py  generate_architecture_diagram.py  generate_model_bk2.py  generate_scenarios.py  gif_worker.sbatch  hpc_run_all.sh  narval_evaluate.sh  narval_ppo_cl_all_methods.sh  narval_sac_cl_venv.sh  narval_test_sac_cl.sh  replay_episode.py  replay_model_bk2.py  run_benchmark.py  run_cl.py  run_single.py  submit_bk2_all.sh  submit_bk2_combo.sh  submit_gif_all.sh  visualize_episode.py  visualize_progress.py
(+21 files in other folders)
